--- a/config.yaml
+++ b/config.yaml
@@ -11,4 +11,5 @@ API_ENDPOINTS:
     GET_DATA: '/api/v1/project/data'
     GET_PROJECT_INFO: '/api/v1/project/info'
     UPDATE_LABEL_DATA: '/api/v1/project/data'
+    SAMPLE_DATA: '/api/v1/project/sample'
     UPDATE_PROJECT_INFO: '/api/v1/project/info'
